made changes to fix issues with align
fuck web frontend again, but now it looks even better

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,19 +1,26 @@
+body {
+  padding-top: 26px;
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  align-items: center;
+}
+
+body > section {
+  width: 100%;
+  max-width: 1000px;
+}
+
 @media (min-width: 300px) {
   .showcase {
-    width: 90%;
     padding-right: 3px;
   }
 }
 
 .profilepic_image {
-  border-radius: 52%;
+  border-radius: 100%;
   border-style: solid;
-  border-color: rgb(255,255,255);
-  overflow: hidden;
-  position: sticky;
-  /*display: flex;*/
-  margin-top: 34px;
-  margin-left: 75px;
+  border-color: rgb(255, 255, 255);
 }
 
 .profilepic_name {
@@ -21,38 +28,48 @@
   position: static;
   margin-top: 45px;
   font-size: 30.4px;
+  font-family: Asap, sans-serif;
+  text-decoration: underline;
+  color: var(--bs-orange);
 }
 
-.profile_link {
+.profilepics {
+  width: 100%;
+  height: 300px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  padding-left: 3px;
+  margin-top: 26px;
 }
 
-@media (min-width: 576px) {
-  .profilepic_image {
-    margin-left: 185px;
+.grid-item {
+  height: 100%;
+  border-style: solid none;
+  border-left-style: solid;
+  border-color: var(--bs-orange);
+  border-bottom-color: var(--bs-orange);
+  padding: 26px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.grid-item:last-of-type {
+  border-right-style: solid;
+}
+
+@media (max-width: 768px) {
+  .grid-item {
+    border-style: none solid;
+    border-top-style: solid;
+  }
+
+  .grid-item:last-of-type {
+    border-bottom-style: solid;
+  }
+
+  .profilepics {
+    grid-template-columns: 1fr;
   }
 }
-
-@media (min-width: 768px) {
-  .profilepic_image {
-    margin-left: 29px;
-  }
-}
-
-@media (min-width: 992px) {
-  .profilepic_image {
-    margin-left: 72px;
-  }
-}
-
-@media (min-width: 1200px) {
-  .profilepic_image {
-    margin-left: 101px;
-  }
-}
-
-@media (min-width: 1400px) {
-  .profilepic_image {
-    margin-left: 132px;
-  }
-}
-
